Auditory Exercise 4 and 5

--- a/src/main/resources/templates/manufacturers.html
+++ b/src/main/resources/templates/manufacturers.html
@@ -70,28 +70,28 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1 class="jumbotron-heading">WEB PROGRAMMING SHOP</h1>
-            <h3 class="jumbotron-heading">All categories</h3>
+            <h3 class="jumbotron-heading">All products</h3>
         </div>
     </section>
 
     <div class="container mb-4">
         <div class="row">
-            <div class="col-12" th:if="${categories.size() > 0}">
+            <div class="col-12" th:if="${manufacturers.size() > 0}">
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
                         <tr>
-                            <th scope="col">Category name</th>
-                            <th scope="col">Description</th>
+                            <th scope="col">Manufacturer name</th>
+                            <th scope="col">Address</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="cat : ${categories}" class="category">
-                            <td th:text="${cat.getName()}"></td>
-                            <td th:text="${cat.getDescription()}"></td>
+                        <tr th:each="man : ${manufacturers}" class="product">
+                            <td th:text="${man.getName()}"></td>
+                            <td th:text="${man.getAddress()}"></td>
                             <td class="text-right">
                                 <th:block>
-                                    <form th:action="@{'/categories/delete/{id}' (id=${cat.getId()})}"
+                                    <form th:action="@{'/manufacturers/delete/{id}' (id=${man.getId()})}"
                                           th:method="DELETE">
                                         <button type="submit"
                                                 class="btn btn-sm btn-danger delete-product">
@@ -100,9 +100,9 @@
                                     </form>
                                 </th:block>
                                 <th:block>
-                                    <a th:href="@{'/categories/edit-form/{id}' (id=${cat.getId()})}"
+                                    <a th:href="@{'/manufacturers/edit-form/{id}' (id=${man.getId()})}"
                                        class="btn btn-sm btn-info edit-product">
-                                        <i class="fa fa-edit">Edit</i>
+                                        <i class="fa fa-trash">Edit</i>
                                     </a>
                                 </th:block>
                             </td>
@@ -114,8 +114,8 @@
             <div class="col mb-3">
                 <div class="row">
                     <div class="col-sm-12 col-md-12">
-                        <a href="/categories/add-form" class="btn btn-block btn-dark add-product-btn">
-                            Add new category
+                        <a href="/manufacturers/add-form" class="btn btn-block btn-dark add-product-btn">
+                            Add new manufacturer
                         </a>
                     </div>
                 </div>
