--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
@@ -70,29 +71,39 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1 class="jumbotron-heading">WEB PROGRAMMING SHOP</h1>
-            <h3 class="jumbotron-heading">All categories</h3>
+            <h3 class="jumbotron-heading">All products</h3>
         </div>
     </section>
 
     <div class="container mb-4">
         <div class="row">
-            <div class="col-12" th:if="${categories.size() > 0}">
+            <div class="col-12" th:if="${products.size() > 0}">
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
                         <tr>
-                            <th scope="col">Category name</th>
-                            <th scope="col">Description</th>
+                            <th scope="col">Product name</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Level</th>
+                            <th scope="col">Manufacturer</th>
+                            <th scope="col">Category</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="cat : ${categories}" class="category">
-                            <td th:text="${cat.getName()}"></td>
-                            <td th:text="${cat.getDescription()}"></td>
+                        <tr th:each="product : ${products}" class="product">
+                            <td th:text="${product.getName()}">[product.name]</td>
+                            <td th:text="${product.getPrice()}">[product.price]</td>
+                            <td th:text="${product.getLevel().name()}">[product.level]</td>
+                            <td th:text="${product.getManufacturer() != null} ? ${product.getManufacturer().getName()} : 'No manufacturer'">
+                                [product.manufacturer]
+                            </td>
+                            <td th:text="${product.getCategory() != null} ? ${product.getCategory().getName()} : 'No category'">
+                                [product.category]
+                            </td>
                             <td class="text-right">
                                 <th:block>
-                                    <form th:action="@{'/categories/delete/{id}' (id=${cat.getId()})}"
-                                          th:method="DELETE">
+                                    <form th:action="@{'/products/delete/{id}' (id=${product.getId()})}"
+                                          th:method="delete">
                                         <button type="submit"
                                                 class="btn btn-sm btn-danger delete-product">
                                             <i class="fa fa-trash">Delete</i>
@@ -100,11 +111,17 @@
                                     </form>
                                 </th:block>
                                 <th:block>
-                                    <a th:href="@{'/categories/edit-form/{id}' (id=${cat.getId()})}"
+                                    <a th:href="@{'/products/edit-form/{id}' (id=${product.getId()})}"
                                        class="btn btn-sm btn-info edit-product">
                                         <i class="fa fa-edit">Edit</i>
                                     </a>
                                 </th:block>
+                                <form th:action="@{'/shopping-cart/add-product/{id}' (id=${product.getId()})}"
+                                      th:method="POST">
+                                    <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-add">Add
+                                        product
+                                        to cart</i></button>
+                                </form>
                             </td>
                         </tr>
                         </tbody>
@@ -114,8 +131,8 @@
             <div class="col mb-3">
                 <div class="row">
                     <div class="col-sm-12 col-md-12">
-                        <a href="/categories/add-form" class="btn btn-block btn-dark add-product-btn">
-                            Add new category
+                        <a href="/products/add-form" class="btn btn-block btn-dark add-product-btn">
+                            Add new product
                         </a>
                     </div>
                 </div>
@@ -148,7 +165,7 @@
             </div>
 
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
-                <h5>Others links</h5>
+                <h5>Other links</h5>
                 <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                 <ul class="list-unstyled">
                     <li><a href="">Link 1</a></li>
