Auditory Exercise 6 and 7

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,26 +16,10 @@
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e59232f0a1.js" crossorigin="anonymous"></script>
 </head>
-<div class="container" xmlns:th="http://www.thymeleaf.org">
-    <form class="form-signin mt-xl-5" method="post" action="/login">
-        <h2 class="form-signin-heading">Sign in</h2>
-        <p>
-            <label for="username" class="sr-only">Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username"
-                   autofocus="">
-        </p>
-        <p>
-            <label for="password" class="sr-only">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password"
-            >
-        </p>
 
-        <th:block th:if="${error != null}">
-            <div th:text="${error}" class="text-danger"></div>
-        </th:block>
-
-        <button id="submit" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a href="/register" class="btn btn-block btn-light">Don't have an account? Register here!</a>
-    </form>
-</div>
+<section class="jumbotron text-center">
+    <div class="container">
+        <h1 class="jumbotron-heading">WEB PROGRAMMING SHOP</h1>
+    </div>
+</section>
 </html>
