--- a/src/main/resources/templates/manufacturer-form.html
+++ b/src/main/resources/templates/manufacturer-form.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Manufacturer Form</title>
+    <meta charset="UTF-8"/>
+    <title>Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e59232f0a1.js" crossorigin="anonymous"></script>
 </head>
-<body>
-<form method="post" th:action="@{${manufacturer != null} ? '/manufacturers/' + ${manufacturer.id} : '/manufacturers'}">
-    <div>
-        <label for="name">Manufacturer Name</label>
-        <input type="text"
-               id="name"
-               name="name"
-               th:value="${manufacturer != null ? manufacturer.name : ''}"
-               required>
+
+<div xmlns:th="http://www.thymeleaf.org">
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Manufacturer Form</h1>
+        </div>
+    </section>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <form method="post"
+                      th:action="@{${manufacturer == null ? '/manufacturers' : '/manufacturers/' + manufacturer.id}}">
+
+                    <div class="form-group">
+                        <label for="name">Manufacturer Name</label>
+                        <input type="text"
+                               class="form-control"
+                               id="name"
+                               name="name"
+                               th:value="${manufacturer != null ? manufacturer.name : ''}"
+                               required
+                               placeholder="Enter manufacturer name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="address">Address</label>
+                        <input type="text"
+                               class="form-control"
+                               id="address"
+                               name="address"
+                               th:value="${manufacturer != null ? manufacturer.address : ''}"
+                               required
+                               placeholder="Enter address">
+                    </div>
+
+                    <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+                    <a type="button" class="btn btn-secondary" href="/manufacturers">Back</a>
+                </form>
+            </div>
+        </div>
     </div>
-
-    <div>
-        <label for="address">Address</label>
-        <input type="text"
-               id="address"
-               name="address"
-               th:value="${manufacturer != null ? manufacturer.address : ''}"
-               required>
-    </div>
-
-    <button id="submit" type="submit">Submit</button>
-    <a id="back" href="/manufacturers" type="button" class="btn btn-primary">Back to Manufacturers</a>
-</form>
-
-<div>
-    <ul id="nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/logout">Logout</a></li>
-    </ul>
 </div>
-</body>
 </html>
