--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -1,79 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Product Form</title>
+    <meta charset="UTF-8"/>
+    <title>Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e59232f0a1.js" crossorigin="anonymous"></script>
 </head>
-<body>
-<form method="post" th:action="@{${product != null ? '/products/' + product.id : '/products'}}">
-    <div>
-        <label for="name">Product Name</label>
-        <input type="text"
-               id="name"
-               name="name"
-               th:value="${product != null ? product.name : ''}"
-               required>
+
+<div xmlns:th="http://www.thymeleaf.org">
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">WEB PROGRAMMING SHOP</h1>
+        </div>
+    </section>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <form method="post" th:action="@{${product == null ? '/products' : '/products/' + product.id}}">
+
+                    <div class="form-group">
+                        <label for="name">Product name</label>
+                        <input type="text"
+                               class="form-control"
+                               id="name"
+                               name="name"
+                               th:value="${product != null ? product.getName() : ''}"
+                               required
+                               placeholder="Enter product name">
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Price</label>
+                        <input type="number"
+                               class="form-control"
+                               id="price"
+                               name="price"
+                               th:value="${product?.getPrice()}"
+                               placeholder="Price">
+                    </div>
+                    <div class="form-group">
+                        <label for="quantity">Quantity</label>
+                        <input type="number"
+                               class="form-control"
+                               id="quantity"
+                               name="quantity"
+                               th:value="${product?.getQuantity()}"
+                               placeholder="Quantity">
+                    </div>
+                    <div class="form-group">
+                        <label>Product Level</label>
+                        <select name="level" class="form-control">
+                            <option th:each="level : ${levels}"
+                                    th:text="${level}"
+                                    th:value="${level}"
+                                    th:selected="${product?.level == level}"
+                            >
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Manufacturer</label>
+                        <select name="manufacturer" class="form-control">
+                            <option
+                                    th:each="manufacturer : ${manufacturers}"
+                                    th:text="${manufacturer.getName()}"
+                                    th:value="${manufacturer.id}"
+                                    th:selected="${product != null && product.manufacturer != null && product.manufacturer == manufacturer}"
+                            ></option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Category</label>
+                        <select name="category" class="form-control">
+                            <option th:each="category : ${categories}"
+                                    th:text="${category.name}"
+                                    th:value="${category.getId()}"
+                                    th:selected="${product?.category?.id == category.getId()}"
+                            >
+                            </option>
+                        </select>
+                    </div>
+                    <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+                    <a type="button" class="btn btn-primary" href="/products">Back</a>
+                </form>
+            </div>
+        </div>
     </div>
-
-    <div>
-        <label for="price">Price</label>
-        <input type="number"
-               id="price"
-               name="price"
-               th:value="${product != null ? product.price : ''}"
-               required>
-    </div>
-
-    <div>
-        <label for="quantity">Quantity</label><br/>
-        <input type="number"
-               id="quantity"
-               name="quantity"
-               th:value="${product != null ? product.quantity : ''}"
-               min="1"
-               required>
-    </div>
-
-    <div>
-        <label for="level">Level</label><br/>
-        <select id="level" name="level" required>
-            <option th:each="l : ${levels}"
-                    th:value="${l}"
-                    th:text="${l.name}"
-                    th:selected="${product != null && product.level != null && product.level == l}">
-        </select>
-    </div>
-
-    <div>
-        <label for="category">Category</label><br/>
-        <select id="category" name="category" required>
-            <option th:each="category : ${categories}"
-                    th:value="${category.id}"
-                    th:text="${category.name}"
-                    th:selected="${product != null && product.category != null && product.category == category}">
-        </select>
-    </div>
-
-    <div>
-        <label for="manufacturer">Manufacturer</label><br/>
-        <select id="manufacturer" name="manufacturer" required>
-            <option th:each="manufacturer : ${manufacturers}"
-                    th:value="${manufacturer.id}"
-                    th:text="${manufacturer.name}"
-                    th:selected="${product != null && product.manufacturer != null && product.manufacturer == manufacturer}">
-        </select>
-    </div>
-
-    <button id="submit" type="submit">Submit</button>
-    <a id="back" href="/products" type="button" class="btn btn-primary">Back to Products</a>
-</form>
-
-<div>
-    <ul id="nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/logout">Logout</a></li>
-    </ul>
 </div>
-</body>
-</html>
 
+</html>
